<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".surah_activity"
    android:background="@drawable/start">

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="696dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39sp"
            android:bufferType="spannable"
            android:capitalize="words"
            android:text="      Holy Quran"
            android:textColor="#FBFAFA"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="With Urdu Translation"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/anNas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:onClick="playAudioNas"
            android:text="@string/surah_an_nas"
            app:backgroundTint="#9C27B0" />

        <Button
            android:id="@+id/alFalaq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/surah_al_falaq"
            android:onClick="PlayAudioFalaq"
            app:backgroundTint="#9C27B0" />

        <Button
            android:id="@+id/alIkhlas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/surah_al_ikhlas"
            android:onClick="playAudioIkhlas"
            app:backgroundTint="#9C27B0" />

        <Button
            android:id="@+id/alLahab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/surah_al_lahab"
            android:onClick="PlayAudiolahab"
            app:backgroundTint="#9C27B0" />

        <Button
            android:id="@+id/anNasr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/surah_an_nasr"
            android:onClick="PlayAudioNasr"
            app:backgroundTint="#9C27B0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>