<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFalak"
    android:background="@drawable/start">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="700dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="371dp"
            android:layout_height="292dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/alfalak" />

        <Button
            android:id="@+id/PlayBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="0"
            android:onClick="PlayAudio"
            android:text="@string/play2" />

        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="0"
            android:onClick="PauseAudio"
            android:text="Pause" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="0"
            android:onClick="stop"
            android:text="@string/stop0" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>